Fix icons list vertical alignment

--- a/src/app/pages/invoices/invoice-item/invoice-item.component.scss
+++ b/src/app/pages/invoices/invoice-item/invoice-item.component.scss
@@ -33,6 +33,7 @@
   .paymentRow {
     width: 100%;
     margin-left: 0;
+    align-items: center;
   }
 
   .xIcon:hover {
@@ -67,6 +68,7 @@
   .irow {
     width: 100%;
     margin-left: 0;
+    align-items: center;
   }
 
   hr {
